Java garbage collection notes